--- a/.github/actions/docker-build-push/action.yml
+++ b/.github/actions/docker-build-push/action.yml
@@ -16,6 +16,7 @@ runs:
   steps:
   - id: version
     run: echo "version=$(cat VERSION)" >> "$GITHUB_OUTPUT"
+    shell: bash
 
   - uses: docker/setup-buildx-action@v3
 
