--- a/.github/actions/docker-build-push/action.yml
+++ b/.github/actions/docker-build-push/action.yml
@@ -4,7 +4,7 @@ inputs:
     description: context of Dockerfile
   file:
     description: filepath of Dockerfile
-    default: Dockerfile
+    default: ./Dockerfile
   push:
     description: whether docker image should be pushed
     default: false
