--- a/.github/actions/docker-build-push/action.yml
+++ b/.github/actions/docker-build-push/action.yml
@@ -12,7 +12,17 @@ runs:
   using: "composite"
   steps:
   - id: version
-    run: echo "version=$(cat ${{ inputs.context }}/VERSION)" >> "$GITHUB_OUTPUT"
+    run: |
+      version="$(cat ${{ inputs.context }}/VERSION)"
+      echo "version is ${version}"
+      echo "version=${version}" >> "$GITHUB_OUTPUT"
+    shell: bash
+
+  - id: project
+    run: |
+      project="$(basename ${{ inputs.context }})"
+      echo "project is ${project}"
+      echo "project=${project}" >> "$GITHUB_OUTPUT"
     shell: bash
 
   - uses: docker/setup-buildx-action@v3
@@ -28,7 +38,7 @@ runs:
     with:
       context: ${{ inputs.context }}
       push: ${{ inputs.push == 'true' }}
-      tags: ghcr.io/${{ github.repository }}:${{ steps.version.outputs.version }}
+      tags: ghcr.io/${{ github.repository }}/${{ steps.project.outputs.project }}:${{ steps.version.outputs.version }}
       cache-from: type=gha
       cache-to: type=gha,mode=max
       file: ${{ inputs.context }}/Dockerfile
